------------
v3.0.0alpha4
------------




------------
v3.0.0alpha3
------------

|+

------------
v3.0.0alpha2
------------

|+

------------
v3.0.0alpha1
------------


------
v2.0.6
------

[jan] Mark PHP 7 as supported.


------
v2.0.5
------

[jan] Remove unnecessary include.


------
v2.0.4
------

[jan] Revert: Only store keys in cookie if cookies are in use
      (thomas.jarosch@intra2net.com, Bug #13284).


------
v2.0.3
------

[mms] Only store keys in cookie if cookies are in use
      (thomas.jarosch@intra2net.com, Bug #13284).
[mms] Correctly clear secret key from cookie data
      (thomas.jarosch@intra2net.com, Bug #13283).


------
v2.0.2
------

[jan] Fix package.xml.


------
v2.0.1
------

[mms] Use Horde_Crypt_Blowfish instead of Crypt_Blowfish.


------
v2.0.0
------

First stable release for Horde 5.


---------
v2.0.0RC1
---------

[mms] If secret key is changed, change the associated  key or else key change
      may not be recognized in the current page access (Bug #11570).
[mms] Limit decryption/encryption key to 56 bytes (Bug #11566).
[mms] Mark secret cookie data as HttpOnly.
[mms] Add Exception code constants.


-----------
v2.0.0beta2
-----------

[mms] Use Horde_Support_Randomid class to generate secret key.


-----------
v2.0.0beta1
-----------

First beta release for Horde 5.


------------
v2.0.0alpha1
------------

First alpha release for Horde 5.


------
v1.0.4
------

[mms] If secret key is changed, change the associated $_COOKIE key or else key
      change may not be recognized in the current page access (Bug #11570).


------
v1.0.3
------

[mms] Limit decryption/encryption key to 56 bytes (Bug #11566).
[mms] Mark secret cookie data as HttpOnly.


------
v1.0.2
------

[mms] Secret keys should always be session expiration cookies.
[mms] Add DEFAULT_KEY constant.
[mms] Actually delete the cookie key from the browser when clearKey() is
      called.


------
v1.0.1
------

[rla] Add license file.


------
v1.0.0
------
